--- a/src/essay/2024/20241212Essay.md
+++ b/src/essay/2024/20241212Essay.md
@@ -13,9 +13,9 @@ description: 吾日三省吾身，兼听则明，偏听则暗
 
  &emsp;&emsp;说完了之后我突然沉默了，在内心里反问自己，我为什么要对别人说教，是真的想让别人变好吗？那我说的难道就是对的吗? 不是对的为什么要以那种说教的语气来说，这不就是自负吗？自以为是！自以为是对的。
 
- &emsp;&emsp;反思片刻，察觉出自身态度不对，对别人说教本身有种站在一个居高临下的位置去pua 别人的意思。说教别人，自身的态度就不正确。如果真的想告诉他什么，应该是以平等的方式去分享自己的感悟，或者是分享自己的经历，以讨论，探讨的态度来做这件事情。
-
- &emsp;&emsp;扩展一下，世界上，没有人是绝对正确的，包括所谓的权威，在获取信息时，需要进行判断，进行质疑和确认。在输出信息时，同样需要保持谦逊，接受质疑，接受意见，进行判断吸纳。
+ &emsp;&emsp;反思片刻，察觉出自身态度不对，对别人说教本身有种居高临下的去pua 别人的意思。说教别人，自身的态度就不正确。如果真的想告诉他什么，应该是以平等的方式去分享自己的感悟，或者是分享自己的经历，以讨论，探讨的态度来做这件事情。以后不能这样了，铭记一下！（回想起来，从小我爸就和我人，人长了一个嘴巴两个眼睛两个耳朵，就是让人少说话，多听多看的。现在来看，当初没听进去）
+ 
+ &emsp;&emsp;再扩展一下，这个世界上，没有人是绝对正确的，即使是所谓的权威，在获取信息时，需要进行判断，进行质疑和确认。在输出信息时，同样需要保持谦逊，接受质疑，接受意见，进行判断和吸纳，同时，轻易不进行发表言论，没有调查就没有发言权。
 
  &emsp;&emsp;在当下，很多人是缺失这个能力的，接受信息不进行确认，听风就是雨，不经过调查就轻易相信然后四处传播，所以才会有那么多谣言。在输出信息的时候，不听从意见，认为自己就是对的，别人都是傻逼。
 
