--- a/src/essay/2024/20241110反思关于写博客的事情.md
+++ b/src/essay/2024/20241110反思关于写博客的事情.md
@@ -2,11 +2,13 @@
 title: 反思下立志写博客没坚持下来的事情
 date: 2024-11-10 21:50:00
 description: 关于写博客为什么没有坚持下去
+order: 1000
 category:
     - 随笔
 tag: 
     - 反思
     - 感悟
+    - 2024随笔
 ---
 
 # 反思关于写博客搞一下个人站点的事情
