--- a/src/essay/2024/20241212Essay.md
+++ b/src/essay/2024/20241212Essay.md
@@ -1,11 +1,13 @@
 ---
 title: 24年12月12日 睡前反思随笔，关于言论
 date: 2024-12-12 23:34:00
+order: 997
 category:
     - 随笔
 tag: 
     - 感悟
     - 沟通
+    - 2024随笔
 description: 吾日三省吾身，兼听则明，偏听则暗
 ---
 # 24年12月12日 睡前反思随笔
